# tentacool

./: .gitignore  .travis.yml  CMakeLists.txt  DataFileManager.cpp  DataFileManager.hpp  DataManager.cpp  DataManager.hpp  FeedBrocker_tests  HpfeedsBrockerConnection.cpp  HpfeedsBrockerConnection.hpp  HpfeedsBroker.cpp  HpfeedsBrokerConnection.cpp  HpfeedsBrokerConnection.hpp  Makefile.am  ProvaGit.h  README.md  SafeSet.hpp  SafeSet_no_rw.hpp  auth_keys.dat.sample  authenticator.cpp  authenticator.hpp  broker.cpp  broker.hpp  broker_connection.cpp  broker_connection.hpp  cc.html  configure.ac  connection_manager.cpp  connection_manager.hpp  data_manager.cpp  data_manager.hpp  hpfeedbroker.cpp  hpfeedbroker.hpp  hpfeedclient.cpp  hpfeedclient.hpp  hpfeeds.c  hpfeeds.cpp  hpfeeds.h  hpfeeds.hpp  index.html  (+12 more)
cc_html/: executions.html  functions.html  index.html  source_0.html  source_0_preprocessed.html  source_1.html  source_1_preprocessed.html  source_2.html  source_2_preprocessed.html  source_3.html  source_3_preprocessed.html  source_4.html  source_4_preprocessed.html  source_5.html  source_5_preprocessed.html  source_6.html  source_6_preprocessed.html  sources.html
docs/: file.md  performance.md
docs/html/: annotated.html  annotated.js  authenticator_8hpp_source.html  broker__connection_8hpp_source.html  classAuthenticator-members.html  classAuthenticator.html  classAuthenticator.js  classAuthenticator_a33160d14ef1251b2acf81575741272b3_cgraph.map  classAuthenticator_a33160d14ef1251b2acf81575741272b3_cgraph.md5  classBrokerApplication-members.html  classBrokerApplication.html  classBrokerApplication.js  classBrokerApplication__inherit__graph.map  classBrokerApplication__inherit__graph.md5  classBrokerApplication_acc3abe2edbfa4287c5b8dab8dace7ebd_cgraph.map  classBrokerApplication_acc3abe2edbfa4287c5b8dab8dace7ebd_cgraph.md5  classBrokerConnection-members.html  classBrokerConnection.html  classBrokerConnection.js  classBrokerConnection__inherit__graph.map  classBrokerConnection__inherit__graph.md5  classDataManager-members.html  classDataManager.html  classDataManager.js  classHpfeedsBrokerApplication-members.html  classHpfeedsBrokerApplication.html  classHpfeedsBrokerApplication.js  classHpfeedsBrokerApplication__inherit__graph.map  classHpfeedsBrokerApplication__inherit__graph.md5  classHpfeedsBrokerApplication_a0409e47f6227b8a25c5aa7816bf0296d_cgraph.map  classHpfeedsBrokerApplication_a0409e47f6227b8a25c5aa7816bf0296d_cgraph.md5  classHpfeedsBrokerConnection-members.html  classHpfeedsBrokerConnection.html  classHpfeedsBrokerConnection.js  classHpfeedsBrokerConnection__inherit__graph.map  classHpfeedsBrokerConnection__inherit__graph.md5  classMessageRouter-members.html  classMessageRouter.html  classMessageRouter.js  classReadWriteLock-members.html  (+58 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  search.js  variables_0.js  variables_1.js  variables_3.js
img/: tentacool.xcf
tests/: Makefile.am  authenticator.cpp  authenticator.hpp  authenticator_test  authenticator_test.cpp  authenticator_tests.cpp  authenticator_tests.hpp  broker.cpp  broker.hpp  broker_connection.cpp  broker_connection.hpp  code_coverage_script.sh  configure.ac  data_manager.cpp  data_manager.hpp  data_manager_tests.cpp  data_manager_tests.hpp  hpfeedbroker_tests.cpp  hpfeeds.cpp  hpfeeds.hpp  hpfeeds_client.cpp  hpfeeds_client.hpp  hpfeeds_tests.cpp  hpfeeds_tests.hpp  integration_tests.cpp  integration_tests.hpp  message_router.cpp  message_router.hpp  rw_lock_t.cpp  rw_lock_t.hpp  safe_set.hpp
