bin_PROGRAMS = tentacool
tentacool_SOURCES = authenticator.cpp authenticator.hpp broker.cpp message_router.cpp  message_router.hpp rw_lock_t.cpp rw_lock_t.hpp safe_set.hpp broker_connection.cpp  broker_connection.hpp  data_manager.cpp  data_manager.hpp hpfeeds.c hpfeeds.h sha1.c sha1.h
AM_CPPFLAGS = -Wall -std=c++0x
