bin_PROGRAMS = tentacool
tentacool_SOURCES = authenticator.cpp authenticator.hpp  hpfeeds.cpp hpfeeds.hpp broker.cpp broker.hpp message_router.cpp  message_router.hpp rw_lock_t.cpp rw_lock_t.hpp safe_set.hpp broker_connection.cpp  broker_connection.hpp  data_manager.cpp  data_manager.hpp tentacool.cpp
AM_CPPFLAGS = -Wall -Werror -std=c++0x
SUBDIRS = tests
