bin_PROGRAMS = tentacool_tests
tentacool_tests_SOURCES = authenticator.cpp authenticator.hpp data_manager.cpp  data_manager.hpp hpfeeds.cpp hpfeeds.hpp authenticator_tests.cpp authenticator_tests.hpp broker.cpp broker.hpp message_router.cpp  message_router.hpp rw_lock_t.cpp rw_lock_t.hpp safe_set.hpp broker_connection.cpp  broker_connection.hpp hpfeeds_client.cpp hpfeeds_client.cpp data_manager_tests.cpp data_manager_tests.hpp hpfeeds_tests.cpp hpfeeds_tests.hpp integration_tests.cpp integration_tests.hpp hpfeedbroker_tests.cpp 
AM_CPPFLAGS = -Wall -std=c++0x
